--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
 SECRET_KEY=hihi
+
+BCRYPT_SALT_ROUND=10
+
+MAIL_PASSWORD = foyndlroyvujdabl
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=lhhoang1101@gmail.com
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=lhhoang1101@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
